<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_title"
        android:text="@string/your_email"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="300dp"
        android:id="@+id/forget_desc"
        android:layout_height="wrap_content"
        android:text="@string/forget_desc"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/forget_title" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/forget_desc"
        android:id="@+id/forget_email"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/your_email" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forget_send"
        style="@style/BlueButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forget_to_find"
        android:textSize="15sp" />


    <TextView
        android:layout_width="300dp"
        android:id="@+id/forget_login"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/forget_send" />
</RelativeLayout>